Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

New Features for 3.27.1
=======================
None

Changes to Existing Features in 3.27.1
======================================
[] As indicated with the V3.26 release, date time fields, when exported to XML,
now are in the W3C dateTime standard format instead of PasswordSafe's.  This release
can nolonger import XML files with date time fields in the old PasswordSafe's forms.
See Help file (the XML section of "Import Password Entries") on how to manually change
the XML file exported prior to V3.26 to allow it to be successfully imported in this release.

Bugs fixed in 3.27.1
====================
[3440318] Filters can now be cleared by double-clicking on the filter indicator in
the status bar. Also, Filter Menu correctly changed when a filter is active.
[3435869] '-g config_file' option now accepts a non-existing file,
creating it after notfying the user.
[3430196] Buttons in the Options property pages now retain the user's Windows theme.

New Features for 3.27
=====================
[3367590] User can now add a database name and description via the Properties
diaolg.
[3349458] Allow filters to match on rules based on the password's length.
[3316779] Shift + "left mouse button 'Double-Click'" now configurable for user.
Default is copy the username to the clipboard.
[] Preferences stored in the database are shown in blue in the Options dialogs.

Changes to Existing Features in 3.27
====================================
[3406549] Tooltip for System tray (displaying database file path) is
now limited to 40 characters (replacing text in the middle with '...'
if needed).
[3348954] The passphrase is now required to change from read-only to
read/write.

Bugs fixed in 3.27
==================