@@ -139,6 +139,9 @@ clipboard.</p>
 
 <p>Copy the current selection's Run Command field to the clipboard.</p>
 
+<p>Note: Variables will be substituted by their values default <u>unless</u> the Ctrl key
+is pressed down when selecting this menu item.</li>
+
 <h3>Browse to URL</h3>
 
 <p>When an entry is selected, and the entry has a URL associated
